Método de login do usuário e correção no import do dotenv
