# backend/routes/usuario.routes.js
@@ -4,5 +4,6 @@ import UsuarioController from "../controllers/usuario.controller.js";
 const usuarioRoutes = Router();
 
 usuarioRoutes.post("/", UsuarioController.registrarUsuario);
+usuarioRoutes.post("/login", UsuarioController.login);
 
 export default usuarioRoutes;
